# climepi-web-app

./: Dockerfile  README.md  environment.yml  pyproject.toml
.github/workflows/: file_size_check.yml  main.yml
data/isimip_cities/: isimip_monthly_2015_to_2100_Cape_Town_ssp126_canesm5_0.nc  isimip_monthly_2015_to_2100_Cape_Town_ssp126_cnrm-cm6-1_0.nc  isimip_monthly_2015_to_2100_Cape_Town_ssp126_cnrm-esm2-1_0.nc  isimip_monthly_2015_to_2100_Cape_Town_ssp126_ec-earth3_0.nc  isimip_monthly_2015_to_2100_Cape_Town_ssp126_gfdl-esm4_0.nc  isimip_monthly_2015_to_2100_Cape_Town_ssp126_ipsl-cm6a-lr_0.nc  isimip_monthly_2015_to_2100_Cape_Town_ssp126_miroc6_0.nc  isimip_monthly_2015_to_2100_Cape_Town_ssp126_mpi-esm1-2-hr_0.nc  isimip_monthly_2015_to_2100_Cape_Town_ssp126_mri-esm2-0_0.nc  isimip_monthly_2015_to_2100_Cape_Town_ssp126_ukesm1-0-ll_0.nc  isimip_monthly_2015_to_2100_Cape_Town_ssp370_canesm5_0.nc  isimip_monthly_2015_to_2100_Cape_Town_ssp370_cnrm-cm6-1_0.nc  isimip_monthly_2015_to_2100_Cape_Town_ssp370_cnrm-esm2-1_0.nc  isimip_monthly_2015_to_2100_Cape_Town_ssp370_ec-earth3_0.nc  isimip_monthly_2015_to_2100_Cape_Town_ssp370_gfdl-esm4_0.nc  isimip_monthly_2015_to_2100_Cape_Town_ssp370_ipsl-cm6a-lr_0.nc  isimip_monthly_2015_to_2100_Cape_Town_ssp370_miroc6_0.nc  isimip_monthly_2015_to_2100_Cape_Town_ssp370_mpi-esm1-2-hr_0.nc  isimip_monthly_2015_to_2100_Cape_Town_ssp370_mri-esm2-0_0.nc  isimip_monthly_2015_to_2100_Cape_Town_ssp370_ukesm1-0-ll_0.nc  isimip_monthly_2015_to_2100_Cape_Town_ssp585_canesm5_0.nc  (+279 more)
src/: cluster.py  get_data.py  run_cluster_app.sh  web_app.py
