[project]
name = "climepi-web-app"
requires-python = ">=3.10"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "linux-aarch64", "osx-arm64", "osx-64", "win-64"]

[tool.pixi.dependencies]
climepi = "0.1.0"

[tool.pixi.feature.dev.dependencies]
ruff = "*"

[tool.pixi.environments]
default = { features = ["dev"], solve-group = "prod" }
prod = { features = [], solve-group = "prod" }

[tool.pixi.feature.dev.tasks]
lint = "ruff check"
